
syntax = "proto3";

package trackerinfo;

option go_package = "github.com/MRibalko/smogtracker/protos;trackerinfov1";

service TrackerInfo {
    rpc Sources(EmptyRequest) returns (SourcesResponse);
    rpc IdsBySource(SourceRequest) returns (IdsBySourceResponse);
    rpc List(EmptyRequest) returns (FullInfoResponse);
}

message EmptyRequest {
}

message SourceRequest {
    string source = 1;
}

message SourcesResponse {
    repeated string Result = 1;
}

message IdsBySourceResponse {
    repeated string Result = 1;
}

message FullInfoResponse {
    repeated TrackerFullInfo Result = 1;
}

message TrackerFullInfo {
    string orig_id = 1;
    string source = 2;
    string description = 3;
    double Latitude = 4;
    double Longitude = 5;
}